# pc-agent

./: .gitignore  AGENTS.md  README.md  README_EN.md  RUN_GUIDE.md  actions.py  agent.py  config.py  config.yaml.example  llm.py  prompts.py  pyproject.toml  requirements.txt  safety.py  schemas.py  screen.py
docs/: PROJECT_STRUCTURE.md
scripts/: analyze_session_log.py
src/desktop_agent/: __init__.py  actions.py  app.py  cli.py  config.py  gui.py  llm.py  prompts.py  safety.py  schemas.py  screen.py
tests/: test_app_runner.py  test_config.py  test_mapping.py  test_schema.py
